--- a/index.html
+++ b/index.html
@@ -24,12 +24,26 @@
           </ul>
           </nav>
           <ul class="contact-section">
-          <li>
-            <a class="contact-mail" href="mailto:info@devstudio.com">info@devstudio.com</a>
-          </li>
-          <li>
-            <a class="contact-telephone" href="tel:+12127724150">+1 212-772-4150</a>
-          </li>
+            <li class="icon-envelope">
+              <svg class="envelope" width="16" height="12">
+                <use href="images/icons.svg#icon-envelope"></use>
+              </svg>
+            </li>
+            <li>
+              <a class="contact-mail" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li class="icon-smartphone">
+              <svg class="smartphone" width="10" height="16">
+                <use href="images/icons.svg#icon-smartphone"></use>
+              </svg>
+            </li>
+            <li>
+              <a class="contact-telephone" href="tel:+12127724150"
+                >+1 212-772-4150</a
+              >
+            </li>
           </ul>
         </div> 
       </div>
@@ -46,6 +60,38 @@
       </section>
       <section class="second-section">
         <div class="container">
+          <div>
+            <ul class="what-we-do-icons">
+              <li>
+                <svg class="icon" width="270" height="120">
+                  <svg width="65.32" height="70" x="102.34" y="25">
+                    <use href="images/icons.svg#icon-antenna-1"></use>
+                  </svg>
+                </svg>
+              </li>
+              <li>
+                <svg class="icon" width="270" height="120">
+                  <svg width="66.96" height="70" x="102.34" y="25">
+                    <use href="images/icons.svg#icon-clock-1"></use>
+                  </svg>
+                </svg>
+              </li>
+              <li>
+                <svg class="icon" width="270" height="120">
+                  <svg width="70" height="53.69" x="102.34" y="25">
+                    <use href="images/icons.svg#icon-diagram-1"></use>
+                  </svg>
+                </svg>
+              </li>
+              <li>
+                <svg class="icon" width="270" height="120">
+                  <svg width="70" height="70" x="102.34" y="25">
+                    <use href="images/icons.svg#icon-astronaut-1"></use>
+                  </svg>
+                </svg>
+              </li>
+            </ul>
+          </div>
          <ul class="our-service-list">
           <li>
             <h3 class="our-service">ATTENTION TO DETAILS</h3>
@@ -125,6 +171,62 @@
             />
             <h3 class="our-team-member">Christopher Walker</h3>
             <h4 class="our-team-specialist">Product Designer</h4>
+            <div>
+                <ul class="social-media-icons">
+                  <li>
+                    <button class="media-button" type="button">
+                      <svg
+                        class="social-media-icon"
+                        width="20"
+                        height="20"
+                        x="12"
+                        y="12"
+                      >
+                        <use href="images/icons.svg#icon-instagram-2"></use>
+                      </svg>
+                    </button>
+                  </li>
+                  <li>
+                    <button class="media-button" type="button">
+                      <svg
+                        class="social-media-icon"
+                        width="20"
+                        height="16.25"
+                        x="12"
+                        y="13.88"
+                      >
+                        <use href="images/icons.svg#icon-twitter-1"></use>
+                      </svg>
+                    </button>
+                  </li>
+                  <li>
+                    <button class="media-button" type="button">
+                      <svg
+                        class="social-media-icon"
+                        width="10"
+                        height="20"
+                        x="17.16"
+                        y="12"
+                      >
+                        <use href="images/icons.svg#icon-facebook-1"></use>
+                      </svg>
+                    </button>
+                  </li>
+                  <li>
+                    <button class="media-button" type="button">
+                      <svg
+                        class="social-media-icon"
+                        width="20"
+                        height="20"
+                        x="12"
+                        y="12"
+                      >
+                        <use href="images/icons.svg#icon-linkedin-1"></use>
+                      </svg>
+                    </button>
+                  </li>
+                </ul>
+            </div>
           </li>
           <li class="our-team-image">
             <img
@@ -136,6 +238,62 @@
             />
             <h3 class="our-team-member">Kylie Evans</h3>
             <h4 class="our-team-specialist">Frontend Developer</h4>
+            <div>
+                <ul class="social-media-icons">
+                  <li>
+                    <button class="media-button" type="button">
+                      <svg
+                        class="social-media-icon"
+                        width="20"
+                        height="20"
+                        x="12"
+                        y="12"
+                      >
+                        <use href="images/icons.svg#icon-instagram-2"></use>
+                      </svg>
+                    </button>
+                  </li>
+                  <li>
+                    <button class="media-button" type="button">
+                      <svg
+                        class="social-media-icon"
+                        width="20"
+                        height="16.25"
+                        x="12"
+                        y="13.88"
+                      >
+                        <use href="images/icons.svg#icon-twitter-1"></use>
+                      </svg>
+                    </button>
+                  </li>
+                  <li>
+                    <button class="media-button" type="button">
+                      <svg
+                        class="social-media-icon"
+                        width="10"
+                        height="20"
+                        x="17.16"
+                        y="12"
+                      >
+                        <use href="images/icons.svg#icon-facebook-1"></use>
+                      </svg>
+                    </button>
+                  </li>
+                  <li>
+                    <button class="media-button" type="button">
+                      <svg
+                        class="social-media-icon"
+                        width="20"
+                        height="20"
+                        x="12"
+                        y="12"
+                      >
+                        <use href="images/icons.svg#icon-linkedin-1"></use>
+                      </svg>
+                    </button>
+                  </li>
+                </ul>
+            </div>
           </li>
           <li class="our-team-image">
             <img
@@ -147,6 +305,62 @@
             />
             <h3 class="our-team-member">Ryan Harris</h3>
             <h4 class="our-team-specialist">Marketing</h4>
+            <div>
+                <ul class="social-media-icons">
+                  <li>
+                    <button class="media-button" type="button">
+                      <svg
+                        class="social-media-icon"
+                        width="20"
+                        height="20"
+                        x="12"
+                        y="12"
+                      >
+                        <use href="images/icons.svg#icon-instagram-2"></use>
+                      </svg>
+                    </button>
+                  </li>
+                  <li>
+                    <button class="media-button" type="button">
+                      <svg
+                        class="social-media-icon"
+                        width="20"
+                        height="16.25"
+                        x="12"
+                        y="13.88"
+                      >
+                        <use href="images/icons.svg#icon-twitter-1"></use>
+                      </svg>
+                    </button>
+                  </li>
+                  <li>
+                    <button class="media-button" type="button">
+                      <svg
+                        class="social-media-icon"
+                        width="10"
+                        height="20"
+                        x="17.16"
+                        y="12"
+                      >
+                        <use href="images/icons.svg#icon-facebook-1"></use>
+                      </svg>
+                    </button>
+                  </li>
+                  <li>
+                    <button class="media-button" type="button">
+                      <svg
+                        class="social-media-icon"
+                        width="20"
+                        height="20"
+                        x="12"
+                        y="12"
+                      >
+                        <use href="images/icons.svg#icon-linkedin-1"></use>
+                      </svg>
+                    </button>
+                  </li>
+                </ul>
+            </div>
           </li>
           <li class="our-team-image">
             <img
@@ -158,27 +372,185 @@
             />
             <h3 class="our-team-member">Tyler Moore</h3>
             <h4 class="our-team-specialist">UI Designer</h4>
+            <div>
+                <ul class="social-media-icons">
+                  <li>
+                    <button class="media-button" type="button">
+                      <svg
+                        class="social-media-icon"
+                        width="20"
+                        height="20"
+                        x="12"
+                        y="12"
+                      >
+                        <use href="images/icons.svg#icon-instagram-2"></use>
+                      </svg>
+                    </button>
+                  </li>
+                  <li>
+                    <button class="media-button" type="button">
+                      <svg
+                        class="social-media-icon"
+                        width="20"
+                        height="16.25"
+                        x="12"
+                        y="13.88"
+                      >
+                        <use href="images/icons.svg#icon-twitter-1"></use>
+                      </svg>
+                    </button>
+                  </li>
+                  <li>
+                    <button class="media-button" type="button">
+                      <svg
+                        class="social-media-icon"
+                        width="10"
+                        height="20"
+                        x="17.16"
+                        y="12"
+                      >
+                        <use href="images/icons.svg#icon-facebook-1"></use>
+                      </svg>
+                    </button>
+                  </li>
+                  <li>
+                    <button class="media-button" type="button">
+                      <svg
+                        class="social-media-icon"
+                        width="20"
+                        height="20"
+                        x="12"
+                        y="12"
+                      >
+                        <use href="images/icons.svg#icon-linkedin-1"></use>
+                      </svg>
+                    </button>
+                  </li>
+                </ul>
+            </div>
           </li>
         </ul>
         </div>
       </section> 
+      <section>
+        <div class="container">
+          <div class="customer-section">
+            <h2>Regular Customers</h2>
+            <ul class="customer-list">
+              <li class="customer-icon">
+                <svg class="logo-icon" width="106" height="60">
+                  <use href="images/icons.svg#icon-Union1"></use>
+                </svg>
+              </li>
+              <li class="customer-icon">
+                <svg class="logo-icon" width="106" height="60">
+                  <use href="images/icons.svg#icon-Logo2"></use>
+                </svg>
+              </li>
+              <li class="customer-icon">
+                <svg class="logo-icon" width="106" height="60">
+                  <use href="images/icons.svg#icon-Logo3"></use>
+                </svg>
+              </li>
+              <li class="customer-icon">
+                <svg class="logo-icon" width="106" height="60">
+                  <use href="images/icons.svg#icon-Logo4"></use>
+                </svg>
+              </li>
+              <li class="customer-icon">
+                <svg class="logo-icon" width="106" height="60">
+                  <use href="images/icons.svg#icon-Logo6"></use>
+                </svg>
+              </li>
+              <li class="customer-icon">
+                <svg class="logo-icon" width="106" height="60">
+                  <use href="images/icons.svg#icon-Logo7"></use>
+                </svg>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </section>
     </main>
     <!--Logo and adress-->
-    <footer class="footer-section">
+    <footer>
+      <section class="footer-section">
       <div class="container">
-      <a class="footer-logo" href="webstudio.com"><span class="logo-color">Web</span>Studio</a>
-      <address class="address-section">
-        <ul class="contact-section-footer">
-          <li>695 Park Ave, NY 10065, USA</li>
-          <li>
-           <a class="contact-item-footer" href="mailto:info@devstudio.com">info@devstudio.com</a>
-          </li>
-          <li>
-          <a class="contact-item-footer" href="tel:+12127724150">+1 212-772-4150</a>
-          </li>
-        </ul>
-      </address>
+        <div class="footer">
+          <div>
+            <a class="footer-logo" href="webstudio.com"><span class="logo-color">Web</span>Studio</a>
+            <address class="address-section">
+              <ul class="contact-section-footer">
+                <li>695 Park Ave, NY 10065, USA</li>
+                <li>
+                  <a class="contact-item-footer" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                </li>
+                <li>
+                <a class="contact-item-footer" href="tel:+12127724150">+1 212-772-4150</a>
+                </li>
+              </ul>
+            </address>
+        </div>
+        <div class="footer-media-section">
+            <p>Find us on</p>
+            <ul class="footer-social-media-icons">
+              <li>
+                <button class="footer-media-button" type="button">
+                  <svg
+                    class="social-media-icon"
+                    width="20"
+                    height="20"
+                    x="12"
+                    y="12"
+                  >
+                    <use href="images/icons.svg#icon-instagram-2"></use>
+                  </svg>
+                </button>
+              </li>
+              <li>
+                <button class="footer-media-button" type="button">
+                  <svg
+                    class="social-media-icon"
+                    width="20"
+                    height="16.25"
+                    x="12"
+                    y="13.88"
+                  >
+                    <use href="images/icons.svg#icon-twitter-1"></use>
+                  </svg>
+                </button>
+              </li>
+              <li>
+                <button class="footer-media-button" type="button">
+                  <svg
+                    class="social-media-icon"
+                    width="10"
+                    height="20"
+                    x="17.16"
+                    y="12"
+                  >
+                    <use href="images/icons.svg#icon-facebook-1"></use>
+                  </svg>
+                </button>
+              </li>
+              <li>
+                <button class="footer-media-button" type="button">
+                  <svg
+                    class="social-media-icon"
+                    width="20"
+                    height="20"
+                    x="12"
+                    y="12"
+                  >
+                    <use href="images/icons.svg#icon-linkedin-1"></use>
+                  </svg>
+                </button>
+              </li>
+            </ul>
+          </div>
+        </div>
       </div>
+      </section>
     </footer>
   </body>
 </html>
