--- a/portfolio.html
+++ b/portfolio.html
@@ -24,12 +24,26 @@
           </ul>
           </nav>
           <ul class="contact-section">
-          <li>
-            <a class="contact-mail" href="mailto:info@devstudio.com">info@devstudio.com</a>
-          </li>
-          <li>
-            <a class="contact-telephone" href="tel:+12127724150">+1 212-772-4150</a>
-          </li>
+            <li class="icon-envelope">
+              <svg class="envelope" width="16" height="12">
+                <use href="images/icons.svg#icon-envelope"></use>
+              </svg>
+            </li>
+            <li>
+              <a class="contact-mail" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li class="icon-smartphone">
+              <svg class="smartphone" width="10" height="16">
+                <use href="images/icons.svg#icon-smartphone"></use>
+              </svg>
+            </li>
+            <li>
+              <a class="contact-telephone" href="tel:+12127724150"
+                >+1 212-772-4150</a
+              >
+            </li>
           </ul>
         </div> 
       </div>
@@ -94,21 +108,84 @@
       </div>
       </section>
     </main>
-    <footer class="footer-section">
-     <div class="container">
-      <a class="footer-logo" href="webstudio.com"><span class="logo-color">Web</span>Studio</a>
-      <address class="address-section">
-        <ul class="contact-section-footer">
-          <li>695 Park Ave, NY 10065, USA</li>
-          <li>
-           <a class="contact-item-footer" href="mailto:info@devstudio.com">info@devstudio.com</a>
-          </li>
-          <li>
-          <a class="contact-item-footer" href="tel:+12127724150">+1 212-772-4150</a>
-          </li>
-        </ul>
-      </address>
-     </div>
+    <footer>
+      <section class="footer-section">
+      <div class="container">
+        <div class="footer">
+          <div>
+            <a class="footer-logo" href="webstudio.com"><span class="logo-color">Web</span>Studio</a>
+            <address class="address-section">
+              <ul class="contact-section-footer">
+                <li>695 Park Ave, NY 10065, USA</li>
+                <li>
+                  <a class="contact-item-footer" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                </li>
+                <li>
+                <a class="contact-item-footer" href="tel:+12127724150">+1 212-772-4150</a>
+                </li>
+              </ul>
+            </address>
+        </div>
+        <div class="footer-media-section">
+            <p>Find us on</p>
+            <ul class="footer-social-media-icons">
+              <li>
+                <button class="footer-media-button" type="button">
+                  <svg
+                    class="social-media-icon"
+                    width="20"
+                    height="20"
+                    x="12"
+                    y="12"
+                  >
+                    <use href="images/icons.svg#icon-instagram-2"></use>
+                  </svg>
+                </button>
+              </li>
+              <li>
+                <button class="footer-media-button" type="button">
+                  <svg
+                    class="social-media-icon"
+                    width="20"
+                    height="16.25"
+                    x="12"
+                    y="13.88"
+                  >
+                    <use href="images/icons.svg#icon-twitter-1"></use>
+                  </svg>
+                </button>
+              </li>
+              <li>
+                <button class="footer-media-button" type="button">
+                  <svg
+                    class="social-media-icon"
+                    width="10"
+                    height="20"
+                    x="17.16"
+                    y="12"
+                  >
+                    <use href="images/icons.svg#icon-facebook-1"></use>
+                  </svg>
+                </button>
+              </li>
+              <li>
+                <button class="footer-media-button" type="button">
+                  <svg
+                    class="social-media-icon"
+                    width="20"
+                    height="20"
+                    x="12"
+                    y="12"
+                  >
+                    <use href="images/icons.svg#icon-linkedin-1"></use>
+                  </svg>
+                </button>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      </section>
     </footer>
   </body>
 </html>
