--- a/index.html
+++ b/index.html
@@ -25,23 +25,17 @@
           </nav>
           <ul class="contact-section">
             <li class="icon-envelope">
-              <svg class="envelope" width="16" height="12">
-                <use href="images/icons.svg#icon-envelope"></use>
-              </svg>
-            </li>
-            <li>
               <a class="contact-mail" href="mailto:info@devstudio.com"
-                >info@devstudio.com</a
+                > <svg class="envelope" width="16" height="12">
+                <use href="images/icons.svg#icon-envelope"></use>
+              </svg>info@devstudio.com</a
               >
-            </li>
-            <li class="icon-smartphone">
-              <svg class="smartphone" width="10" height="16">
-                <use href="images/icons.svg#icon-smartphone"></use>
-              </svg>
             </li>
             <li>
               <a class="contact-telephone" href="tel:+12127724150"
-                >+1 212-772-4150</a
+                >  <svg class="smartphone" width="10" height="16">
+                <use href="images/icons.svg#icon-smartphone"></use>
+              </svg>+1 212-772-4150</a
               >
             </li>
           </ul>
@@ -55,7 +49,6 @@
             <h1 class="main-title">EFFECTIVE SOLUTIONS FOR <br> YOUR BUSINESS</h1>
             <button class="button-item" type="button">Request our service</button>
           </div>
-         
         </div>
       </section>
       <section class="second-section">
@@ -190,8 +183,8 @@
                     <button class="media-button" type="button">
                       <svg
                         class="social-media-icon"
-                        width="20"
-                        height="16.25"
+                        width="23"
+                        height="19"
                         x="12"
                         y="13.88"
                       >
@@ -203,8 +196,8 @@
                     <button class="media-button" type="button">
                       <svg
                         class="social-media-icon"
-                        width="10"
-                        height="20"
+                        width="20"
+                        height="32"
                         x="17.16"
                         y="12"
                       >
@@ -270,8 +263,8 @@
                     <button class="media-button" type="button">
                       <svg
                         class="social-media-icon"
-                        width="10"
-                        height="20"
+                        width="20"
+                        height="32"
                         x="17.16"
                         y="12"
                       >
@@ -324,8 +317,8 @@
                     <button class="media-button" type="button">
                       <svg
                         class="social-media-icon"
-                        width="20"
-                        height="16.25"
+                        width="23"
+                        height="19"
                         x="12"
                         y="13.88"
                       >
@@ -337,8 +330,8 @@
                     <button class="media-button" type="button">
                       <svg
                         class="social-media-icon"
-                        width="10"
-                        height="20"
+                        width="20"
+                        height="32"
                         x="17.16"
                         y="12"
                       >
@@ -391,8 +384,8 @@
                     <button class="media-button" type="button">
                       <svg
                         class="social-media-icon"
-                        width="20"
-                        height="16.25"
+                        width="23"
+                        height="19"
                         x="12"
                         y="13.88"
                       >
@@ -404,8 +397,8 @@
                     <button class="media-button" type="button">
                       <svg
                         class="social-media-icon"
-                        width="10"
-                        height="20"
+                        width="20"
+                        height="32"
                         x="17.16"
                         y="12"
                       >
@@ -511,8 +504,8 @@
                 <button class="footer-media-button" type="button">
                   <svg
                     class="social-media-icon"
-                    width="20"
-                    height="16.25"
+                    width="23"
+                    height="19"
                     x="12"
                     y="13.88"
                   >
@@ -524,8 +517,8 @@
                 <button class="footer-media-button" type="button">
                   <svg
                     class="social-media-icon"
-                    width="10"
-                    height="20"
+                    width="20"
+                    height="32"
                     x="17.16"
                     y="12"
                   >
