--- a/portfolio.html
+++ b/portfolio.html
@@ -12,7 +12,7 @@
     <title>Portofolio</title>
   </head>
   <body>
-    <header class="header-section">
+     <header class="header-section">
       <div class="container">
         <div class="header">
           <a class="logo" href="webstudio.com"><span class="logo-color">Web</span>Studio</a>
@@ -25,23 +25,17 @@
           </nav>
           <ul class="contact-section">
             <li class="icon-envelope">
-              <svg class="envelope" width="16" height="12">
-                <use href="images/icons.svg#icon-envelope"></use>
-              </svg>
-            </li>
-            <li>
               <a class="contact-mail" href="mailto:info@devstudio.com"
-                >info@devstudio.com</a
+                > <svg class="envelope" width="16" height="12">
+                <use href="images/icons.svg#icon-envelope"></use>
+              </svg>info@devstudio.com</a
               >
-            </li>
-            <li class="icon-smartphone">
-              <svg class="smartphone" width="10" height="16">
-                <use href="images/icons.svg#icon-smartphone"></use>
-              </svg>
             </li>
             <li>
               <a class="contact-telephone" href="tel:+12127724150"
-                >+1 212-772-4150</a
+                >  <svg class="smartphone" width="10" height="16">
+                <use href="images/icons.svg#icon-smartphone"></use>
+              </svg>+1 212-772-4150</a
               >
             </li>
           </ul>
@@ -108,7 +102,7 @@
       </div>
       </section>
     </main>
-    <footer>
+     <footer>
       <section class="footer-section">
       <div class="container">
         <div class="footer">
@@ -146,8 +140,8 @@
                 <button class="footer-media-button" type="button">
                   <svg
                     class="social-media-icon"
-                    width="20"
-                    height="16.25"
+                    width="23"
+                    height="19"
                     x="12"
                     y="13.88"
                   >
@@ -159,8 +153,8 @@
                 <button class="footer-media-button" type="button">
                   <svg
                     class="social-media-icon"
-                    width="10"
-                    height="20"
+                    width="20"
+                    height="32"
                     x="17.16"
                     y="12"
                   >
